Angular FE Panel - Initial commit

--- a/src/main/resources/covid19-case-reporting-WEB/src/app/components/footer/footer.component.html
+++ b/src/main/resources/covid19-case-reporting-WEB/src/app/components/footer/footer.component.html
@@ -2,24 +2,18 @@
   <div class=" container-fluid">
     <ul class=" nav">
       <li class=" nav-item">
-        <a class=" nav-link" href="https://www.creative-tim.com?ref=bda-footer">
-          Creative Tim
+        <a class=" nav-link" href="https://localhost:4200">
+          Covid19 Case Reporting Panel
         </a>
       </li>
       <li class=" nav-item">
-        <a class=" nav-link" href="https://www.creative-tim.com/about-us?ref=bda-footer">
+        <a class=" nav-link" href="/">
           About Us
         </a>
       </li>
-      <li class=" nav-item">
-        <a class=" nav-link" href="http://blog.creative-tim.com?ref=bda-footer"> Blog </a>
-      </li>
     </ul>
     <div class=" copyright">
-      &copy; {{ test | date: "yyyy" }} made with
-      <i class=" tim-icons icon-heart-2"> </i> by
-      <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Creative Tim </a>
-      for a better web.
+      &copy; {{ test | date: "yyyy" }} Ethio Covid19 Case Reporting and FollowUp Development Team
     </div>
   </div>
 </footer>
