--- a/src/main/resources/covid19-case-reporting-WEB/src/app/components/sidebar/sidebar.component.html
+++ b/src/main/resources/covid19-case-reporting-WEB/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 <div class="logo">
   <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-mini">
     <div class="logo-img">
-      <img src="./assets/img/angular2-logo-white.png" />
+      <img src="./assets/img/logo.png" />
     </div>
   </a>
-  <a href="https://www.creative-tim.com?ref=bda-sidebar-logo" class="simple-text logo-normal">
-    Creative Tim
+  <a href="/dashboard" class="simple-text logo-normal">
+    Admin Panel
   </a>
 </div>
 <div class="sidebar-wrapper">
