--- a/src/main/resources/covid19-case-reporting-WEB/src/app/components/navbar/navbar.component.html
+++ b/src/main/resources/covid19-case-reporting-WEB/src/app/components/navbar/navbar.component.html
@@ -37,45 +37,10 @@
             <span class=" d-lg-none d-md-block"> Search </span>
           </button>
         </li>
-        <li class=" nav-item" ngbDropdown>
-          <a
-            class=" nav-link"
-            data-toggle="dropdown"
-            href="javascript:void(0)"
-            ngbDropdownToggle
-          >
-            <div class=" notification d-none d-lg-block d-xl-block"></div>
-            <i class=" tim-icons icon-sound-wave"> </i>
-            <p class=" d-lg-none">Notifications</p>
-          </a>
-          <ul class=" dropdown-menu-right dropdown-navbar" ngbDropdownMenu>
-            <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                Mike John responded to your email
-              </a>
-            </li>
-            <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                You have 5 more tasks
-              </a>
-            </li>
-            <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                Your friend Michael is in town
-              </a>
-            </li>
-            <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                Another notification
-              </a>
-            </li>
-            <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
-                Another one
-              </a>
-            </li>
-          </ul>
-        </li>
+
+<!------------------------------------------HEADER DROPDOWN-------------------------------------->
+<!----------------------------------------------------------------------------------------------->
+
         <li class=" nav-item" ngbDropdown>
           <a
             class=" nav-link"
@@ -91,7 +56,7 @@
           </a>
           <ul class=" dropdown-navbar" ngbDropdownMenu>
             <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
+              <a class=" nav-item" href="/user#/user" ngbDropdownItem>
                 Profile
               </a>
             </li>
@@ -102,9 +67,9 @@
             </li>
             <li class=" dropdown-divider"></li>
             <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
+              <button class=" nav-item" (click)="logout()" ngbDropdownItem>
                 Log out
-              </a>
+              </button>
             </li>
           </ul>
         </li>
@@ -113,7 +78,8 @@
     </div>
   </div>
 </nav>
-
+<!------------------------------------Search Modal---------------------------------------------->
+<!---------------------------------------------------------------------------------------------->
 <ng-template #content let-modal>
   <div class=" modal-header">
     <input
