--- a/src/main/resources/covid19-case-reporting-WEB/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/main/resources/covid19-case-reporting-WEB/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,16 +1,21 @@
 <div class="wrapper">
-  <div class="sidebar"><app-sidebar></app-sidebar></div>
+  <div class="sidebar">
+    <app-sidebar></app-sidebar>
+  </div>
   <div class="main-panel">
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
+<!--    <app-footer></app-footer>-->
   </div>
 </div>
+
+
 <div class=" fixed-plugin">
   <div class=" show-dropdown" ngbDropdown>
     <a data-toggle="dropdown" ngbDropdownToggle>
       <i class=" fa fa-cog fa-2x"> </i>
     </a>
+
     <ul ngbDropdownMenu>
       <li class=" header-title">Sidebar Background</li>
       <li class=" adjustments-line">
@@ -41,4 +46,5 @@
       </li>
     </ul>
   </div>
+
 </div>
